# faye

./: .cljstyle  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile
.woodpecker/: deploy.yaml  test.yml
examples/: expt.fy  factorial.fy  hiya.fy  quicksort.fy  test.fy
faye-web/: .gitignore  Cargo.toml  README.md  index.html
faye-web/assets/: render.js
faye-web/src/: eval.rs  highlight.rs  main.rs
samples/: args.fy  factorial.fy  hiya.fy
src/: eval.rs  highlighter.rs  lexer.rs  lib.rs  main.rs  parser.rs  prelude.rs  repl.rs  span.rs
src/eval/: builtin.rs  closure.rs  context.rs  error.rs  expr.rs  mod.rs  scope.rs  userfn.rs
src/lexer/: error.rs  mod.rs  symbol.rs  token.rs
src/parser/: error.rs  mod.rs  node.rs
src/repl/: editor.rs  helper.rs  mod.rs
tests/: equals.fy  error.fy
web/: Cargo.toml  README.md  index.html  trunk.toml
web/assets/: index.scss  render.js
web/src/: element.rs  eval.rs  highlight.rs  main.rs  renderer.rs
