[workspace]
members = [".", "faye-web"]

[workspace.package]
authors = ["fawn <fawn@envs.net>", "rini <rini@rinici.de>"]
repository = "https://codeberg.org/fawn/faye"
homepage = "https://faye.codeberg.page/"
license = "Apache-2.0"
edition = "2021"

[package]
name = "faye"
description = "a pretty lil lisp"
version = "0.5.1"
readme = "README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.4.2", features = ["derive", "cargo"], optional = true }
pomprt = { version = "0.4.0", optional = true }

faye-lsp = { version = "0.2.0", optional = true }
tokio = { version = "1.33.0", features = ["full"], optional = true }

[features]
default = ["dep:clap", "dep:pomprt"]
# TODO: make lsp default when it's ready
# default = ["dep:clap", "dep:pomprt", "lsp"]

lsp = ["dep:faye-lsp", "dep:tokio"]

[profile.release]
strip = true
panic = 'abort'
codegen-units = 1
lto = true
