[workspace]
members = [".", "faye-web"]

[workspace.package]
authors = ["fawn <fawn@envs.net>", "rini <rini@rinici.de>"]
repository = "https://codeberg.org/fawn/faye"
homepage = "https://faye.codeberg.page/"
license = "Apache-2.0"
edition = "2021"

[package]
name = "faye"
description = "a pretty lil lisp"
version = "0.6.0"
readme = "README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"], optional = true }
pomprt = { version = "0.5.3", optional = true }

faye-lsp = { version = "0.2.0", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }

[features]
default = ["cli"]
# TODO: make lsp default when it's ready
# default = ["cli", "lsp"]

cli = ["dep:clap", "dep:pomprt"]
lsp = ["dep:faye-lsp", "dep:tokio"]

[profile.release]
strip = true
panic = 'abort'
codegen-units = 1
lto = true

[patch.crates-io]
pomprt = { git = "https://codeberg.org/faye/pomprt", rev = "1643943507201d878f7e88929ddafb92a8a5fc27"}
