[workspace]
members = [".", "faye-web"]

[workspace.package]
authors = ["fawn <fawn@envs.net>", "rini <rini@rinici.de>"]
repository = "https://codeberg.org/fawn/faye"
homepage = "https://faye.codeberg.page/"
license = "Apache-2.0"
edition = "2021"

[package]
name = "faye"
description = "a pretty lil lisp"
version = "0.6.2"
readme = "README.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.39", features = ["derive", "cargo"], optional = true }
pomprt = { version = "0.5.3", optional = true }

faye-lsp = { version = "0.2.0", optional = true }
tokio = { version = "1.45.1", features = ["full"], optional = true }

[features]
default = ["cli"]
# TODO: make lsp default when it's ready
# default = ["cli", "lsp"]

cli = ["dep:clap", "dep:pomprt"]
lsp = ["dep:faye-lsp", "dep:tokio"]

[profile.release]
strip = true
panic = 'abort'
codegen-units = 1
lto = true

[patch.crates-io]
pomprt = { git = "https://codeberg.org/faye/pomprt", rev = "17f7940885c5a48083c11ad2a19674253bd2b14c"}
