[package]
name = "faye-web"
version = "0.1.0"
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
faye = { path = "..", default-features = false }

maud = "0.25.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["KeyboardEvent", "HtmlElement"] }
