[package]
name = "faye-web"
version = "0.6.3"
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
faye = { path = "..", default-features = false }

maud = "0.27.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["KeyboardEvent", "HtmlElement"] }
