[package]
name = "web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
faye = { path = "..", default-features = false }
maud = "0.25.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "KeyboardEvent",
    "Window",
    "HtmlInputElement",
    "Element",
    "Document",
] }

[profile.release]
strip = true
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
